--- a/Project/node/package.json
+++ b/Project/node/package.json
@@ -4,6 +4,7 @@
         "body-parser": "^1.20.0",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "morgan": "^1.10.0",
         "node-json-db": "^1.5.0",
         "node-schedule": "^2.1.0",
         "package.json": "^2.0.1",
