--- a/Project/node/package.json
+++ b/Project/node/package.json
@@ -7,6 +7,7 @@
         "morgan": "^1.10.0",
         "node-json-db": "^1.5.0",
         "node-schedule": "^2.1.0",
+        "nodemailer": "^6.7.5",
         "package.json": "^2.0.1",
         "path": "^0.12.7",
         "winston": "^3.7.2"
